name:                thinkgear
version:             0.0.0.0
synopsis:            NeuroSky ThinkGear Connector
description:         
  Haskell implementation of the ThinkGear Protocol.
  .
  This library contains the codecs and the basic infrastructure to interface with 
  a ThinkGear compatible device (NeuroSky MindWave Mobile/MindFlex) using a bluetooth connection.  

homepage:            http://github.com/aloiscochard/thinkgear
license:             Apache-2.0
license-file:        LICENSE
author:              Alois Cochard
maintainer:          alois.cochard@gmail.com
copyright:           Copyright 2015 Alois Cochard
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  build-depends:       
     base                   >= 4.7        && <5
   , binary                 >= 0.7        && <0.8
   , bytestring             >= 0.10       && <0.11
   , data-binary-ieee754    >= 0.4        && <0.5
   , machines
   , machines-binary
   , machines-io
  exposed-modules:
    Codec.Binary.ThinkGear
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall

test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       tests
  main-is:              Properties.hs
  ghc-options:          -Wall
  build-depends:       
      base
    , base16-bytestring     >= 0.1        && <0.2
    , binary
    , bytestring
    , machines
    , hspec                 >= 2.1        && <2.2
    , QuickCheck            >= 2.8        && <2.9
    , thinkgear

executable thinkgear-monitor
  main-is:              thinkgear-monitor/Main.hs
  build-depends:       
      base              
    , async
    , base16-bytestring     >= 0.1        && <0.2
    , binary
    , bytestring
    , clock
    , machines
    , machines-binary
    , machines-io
    , resourcet
    , simple-bluetooth      >= 0.1        && <0.2
    , stm
    , stm-chans
    , thinkgear
    , transformers
    , vector
    , vector-fftw
  default-language:     Haskell2010
  ghc-options:          -Wall
